# GDO

./: .gitignore  README.md  pyproject.toml
configs/: diverse.env  eval_longvideo.env  minloss.env  temp.env  temp_plus.env  template.env  train_qwen3_vl_8b_instruct.env
gdo/: __init__.py  build_pair.py  extract_six_metrics.py  merge_metrics.py  resample_frames.py
lmms-eval/lmms_eval/tasks/chartqa/: upload_chartqa.py
scripts/: build.sh  build_profile.sh  eval_lmms.sh  merge_metrics.sh  profile_six_metrics.sh  run_profile_pipeline.sh  setup.sh  train_sft.sh
